[package]
name = "radix_pull_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.38"
log = "0.4.17"
hex = { version = "0.4.3" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0"}
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0"}
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
time = "0.3.34"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = { version = "1.0.113", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
tonic = { version = "0.10.2", features = ["tls-roots","tls"] }

[build-dependencies]
tonic-build = "0.10.2"


[[examples]]
name = "radix_client"