[package]
name = "sui_pull_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10.2", features = ["tls", "tls-roots"]}
prost = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.38"
log = "0.4.17"

# sui
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
shared-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
sui-keys = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
serde_json = { version = "1.0" }

[build-dependencies]
tonic-build = "0.10.2"

[[examples]]
name = "sui_client"
