[package]
name = "radix_pull_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.38"
log = "0.4.17"
hex = { version = "0.4.3" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
time = "0.3.34"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = { version = "1.0.113", features = [] }
serde = { version = "1.0.196", features = ["derive"] }


[[examples]]
name = "radix_client"

