[package]
name = "sui_pull_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.38"
log = "0.4.17"

# sui
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
shared-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
sui-keys = { git = "https://github.com/MystenLabs/sui.git", rev = "testnet-v1.27.0" }
serde_json = { version = "1.0" }
serde = "1.0.203"
reqwest = "0.11.27"
hex = "0.4.3"

[[examples]]
name = "sui_client"
